--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <div class="keys"></div>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
   </body>
 </html>
